[package]
name = "crawlcomply-serve"
description = "CrawlComply endpoints server"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
actix-web = "^4"
actix-web-httpauth = "0.8"
clap = { version = "^4.5", features = ["derive", "env"] }
diesel = { version = "^2.3", features = ["postgres"] }
dotenvy = "^0.15"
env_logger = "^0.11"
indexmap = "^2.11"
rust-actix-diesel-auth-scaffold = { path = "../rust-actix-diesel-auth-scaffold" }
# rust-actix-diesel-auth-scaffold = { git = "https://github.com/offscale/rust-actix-diesel-auth-scaffold", version = "0.0.1" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
crawlcomply-backend = { path = "../crawlcomply-backend" }
# crawlcomply-backend = { git = "https://github.com/crawlcomply/crawlcomply-backend", version = "0.0.1" }
utoipa = { git = "https://github.com/SamuelMarks/utoipa", branch = "bigdecimal", version = "^5.4", features = ["actix_extras", "bigdecimal", "chrono"] }
utoipa-actix-web = { git = "https://github.com/SamuelMarks/utoipa", branch = "bigdecimal" }
utoipa-rapidoc = { git = "https://github.com/SamuelMarks/utoipa", branch = "bigdecimal", features = ["actix-web"] }
utoipa-redoc = { git = "https://github.com/SamuelMarks/utoipa", branch = "bigdecimal", features = ["actix-web"] }
utoipa-scalar = { git = "https://github.com/SamuelMarks/utoipa", branch = "bigdecimal", features = ["actix-web"] }
utoipa-swagger-ui = { git = "https://github.com/SamuelMarks/utoipa", branch = "bigdecimal", features = ["actix-web"] }
mime = "0.3.17"
lazy_static = "1.5.0"
